[gd_scene load_steps=3 format=3 uid="uid://dtoqcxpl6k1g5"]

[ext_resource type="Texture2D" uid="uid://cuy4j3fd134bu" path="res://resources/UI/Spritesheet_UI_Flat.png" id="1_wedc3"]
[ext_resource type="Script" uid="uid://b2xnmnfps6fcx" path="res://scripts/menu.gd" id="2_c2n5p"]

[node name="Menu" type="NinePatchRect"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.5
offset_top = -74.5
offset_right = 110.5
offset_bottom = 74.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_wedc3")
region_rect = Rect2(32, 32, 96, 64)
patch_margin_left = 3
patch_margin_top = 6
patch_margin_right = 3
patch_margin_bottom = 5
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
script = ExtResource("2_c2n5p")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -42.5
offset_right = 68.0
offset_bottom = 42.5
grow_horizontal = 2
grow_vertical = 2

[node name="NewGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="Load" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load Saved Game"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit to desktop"

[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
